<resources>
    <string name="app_name">CoolTesting</string>
    <string name="empty_text">Please enter text! No empty text.</string>
</resources>